# ktxinsights

./: .gitignore  001-overview.md  002-role-of-kminion.md  200-requirements.md  300-kips-related-to-tx.md  ISSUES.md  LICENSE  README.md  SETUP.md  events.jsonl  plot-lag-distributions.md
ccloud-testing/: ccloud_converted.properties  run_analysis_test.sh  run_ccloud_test.sh  run_local_analysis.sh  run_minimal_local_analysis.sh  run_minimal_local_analysis_with_errors.sh
config/: README.md  ccloud.properties.template  cp-all-in-one.properties.template  local.properties.template
implementation-python-1/: QUICKSTART.md  README.md  USER_MANUAL.md  build.sh  pyproject.toml  run_collector_test.py
implementation-python-1/ktxinsights-docker/: docker-compose.yml
implementation-python-1/src/: Dockerfile  entrypoint.sh  requirements.txt
implementation-python-1/src/ktxinsights/: __init__.py  aggregator.py  collector.py  compare.py  replay.py  report.py
implementation-python-1/src/ktxinsights/cli/: aggregate.py  collect.py  compare.py  replay.py  report.py  simulate.py
implementation-python-1/src/ktxinsights/tests/: test_collector.py
implementation-python-1/src/txinsights/: __init__.py  aggregator.py  collector.py  replay.py  simulate.py
implementation-python-1/src/txinsights/cli/: __init__.py  aggregate.py  collect.py  replay.py  report.py  simulate.py
improvements-1/: TASK-1.md  TASK-2.md  TASK-3.md  TASK-4.md
inspiration-1/: 005-other-exporters.md  006-tx-monitoring.md  010-event-flow-simulation.md  020-event-aggregation.md  100-lenses-io-comparison.md  200-requirements.md  400-review-a.md  401-nice-to-have-extensions.md  405-review-details.md
paper-1/: build_paper.sh  draft-2.md  ktxinsights_paper.md  paper.md
report/: comparison_report.html  report.html
scenarios/: 00_minimal.sh  00_minimal_with_errors.sh  01_high_throughput.sh  02_slow_complex.sh  03_unreliable_spiky.sh
solution-proposal-1/: 000_problem_statement.md  001_requirements.md  002_solution_architecture.md  README.md  event-flow-simulation.py  generate_report.py  how-to-generate-scenarios.md  replay_events.py  transaction_aggregator.py
(+33 files in other folders)
