[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ktxinsights"
version = "0.1.0"
authors = [
  { name="Mirko Kaempf", email="info@mirkokaempf.com" },
]
description = "A Python package for Kafka transaction visibility."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "confluent-kafka",
    "prometheus-client",
    "matplotlib",
    "requests",
]

[project.scripts]
ktx-simulate = "ktxinsights.cli.simulate:main"
ktx-replay = "ktxinsights.cli.replay:main"
ktx-aggregate = "ktxinsights.cli.aggregate:main"
ktx-report = "ktxinsights.cli.report:main"
ktx-collect = "ktxinsights.cli.collect:main"
ktx-compare = "ktxinsights.cli.compare:main"

[project.urls]
"Homepage" = "https://github.com/kamir/cflt-ps-ppi-tx-monitoring"
"Issues" = "https://github.com/kamir/cflt-ps-ppi-tx-monitoring/issues"
